# experiments

./: .gitignore  a.py  b.py  pyproject.toml  python_design_errors.txt
gradient/: __init__.py  harmonic.py  momentum.py  relativistic.py
